fixed email not linking project and testimonial due to incorrect matching casing, added titling to towns for improved consistency, changed the images in the gallery: image will stretch but remain whole in wider displays and project thumbnails now are centered for better display preview. Adding logging as well.

--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -344,6 +344,7 @@ p
 }
 
 
+
 [data-tab-info] {
     display: none;
 }
@@ -377,11 +378,13 @@ p
 
 .carousel .carousel-item {
   height: 450px;
+  max-width: 100vw;
 }
 
 .carousel-item img {
     position: absolute;
-    object-fit: cover;
+    display: block;
+    overflow: hidden;
     top: 0;
     left: 0;
     min-height: 450px;
